# scribbli-server

./: .gitignore  .gitpod.yml  README.org  TODO.org  pyproject.toml  requirements.txt
scribbli/: manage.py
scribbli/scribbli/: settings.py  urls.py  wsgi.py
src/: pytest.ini
src/landing/: models.py  schema.py  urls.py  views.py
src/landing/migrations/: 0001_initial.py
src/magiclink/: backends.py  exceptions.py  models.py  utils.py
src/magiclink/migrations/: 0001_initial.py
src/magiclink/templates/emails/: magic-link.html
src/magiclink/tests/: test_utils.py
src/scribbli/: apps.py  asgi.py  enums.py  forms.py  settings.py  signals.py  urls.py  utils.py
src/scribbli/md/: apps.py  models.py  utils.py
src/scribbli/md/migrations/: 0001_initial.py  0002_initial.py
src/scribbli/middleware/: auth.py  dev.py
src/scribbli/migrations/: 0001_initial.py
src/scribbli/models/: mixins.py  user.py
src/scribbli/schema/: __init__.py  custom_fields.py  custom_mutations.py  other.py
src/scribbli/story/: apps.py  forms.py  schema.py
src/scribbli/story/migrations/: 0001_initial.py
src/scribbli/story/models/: character.py
src/scribbli/universe/: apps.py  utils.py
src/scribbli/universe/forms/: __init__.py  base.py  region.py
src/scribbli/universe/migrations/: 0001_initial.py
src/scribbli/universe/models/: __init__.py  region.py  universe.py
src/scribbli/universe/schema/: __init__.py  region.py  universe.py
src/scribbli/universe/signals/: slugify.py
src/scribbli/views/: auth.py
